Modificacion en el codigo para que sea multiplataforma, pudiendo usarse en windows y linux